--- a/data-science.html
+++ b/data-science.html
@@ -77,7 +77,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/fanatics/d7af02b3-235e-4b39-8aae-4abec814147b'>Fanatics - Senior Data Scientist</a></h5> 
+<h5><a href='https://jobs.lever.co/fanatics/d7af02b3-235e-4b39-8aae-4abec814147b'>Fanatics - Senior Data Scientist</a></h5> 
 <p><span class="badge badge-light">Chicago</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -93,11 +93,11 @@
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://h2oai.applytojob.com/apply/V6k4JUphaX/Sr-Enterprise-Account-Exec-Data-Science-ML-Munich'>Sr. Enterprise Account Exec- Data Science / ML -Munich - h2o.ai - Career Page</a></h5> 
+<h5><a href='http://h2oai.applytojob.com/apply/V6k4JUphaX/Sr-Enterprise-Account-Exec-Data-Science-ML-Munich'>Sr. Enterprise Account Exec- Data Science / ML -Munich - h2o.ai - Career Page</a></h5> 
 <p><span class="badge badge-light">Munich</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://h2oai.applytojob.com/apply/Y4bUDCcNNV/Sr-Enterprise-Account-Exec-Data-Science-ML-Sydney'>Sr. Enterprise Account Exec- Data Science / ML -Sydney - h2o.ai - Career Page</a></h5> 
+<h5><a href='http://h2oai.applytojob.com/apply/Y4bUDCcNNV/Sr-Enterprise-Account-Exec-Data-Science-ML-Sydney'>Sr. Enterprise Account Exec- Data Science / ML -Sydney - h2o.ai - Career Page</a></h5> 
 <p><span class="badge badge-light">Sydney</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -112,6 +112,18 @@
 <h5><a href='http://h2oai.applytojob.com/apply/IpXAHNqOgK/Sr-Enterprise-Account-Exec-Data-Science-ML-Mid-Atlantic-MA-DC-VA-PA'>Sr. Enterprise Account Exec- Data Science / ML -Mid Atlantic (MA, DC, VA, PA) - h2o.ai - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
+<hr/>
+<h5><a href='https://datatonic.workable.com/jobs/1085733'>Data Scientist - Apply online - Datatonic - Jobs</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>4 days ago ... Curiosity about new developments in ML and deep learning; Excellent 
+knowledge of numerical optimisation techniques and ML algorithms. Bonus 
+Points:.</p>
+<hr/>
+<h5><a href='https://jenzabar-2.workable.com/jobs/1087330'>Jenzabar - Jobs: Data Scientist - Apply online</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>3 days ago ... ... classification, regression, clustering, time series forecasting, recommendation 
+systems, and text analytics, and a good understanding of deep learning. 5 years
+?...</p>
 <hr/>
 <h5><a href='https://aluperf.referrals.selectminds.com/jobs/bl-consulting-co-op-data-science-ml-33097'>BL Consulting Co-op (Data Science & ML) - Nokia Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -138,7 +150,7 @@ is a remote-only company and we give our employees the opportunity to solve?...<
 American Development Bank's Knowledge, Innovation and Communication 
 Sector.</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/bird/24da3bfe-6231-4d0f-a68c-6b7b833d6cd5'>Bird Careers - Director, Data Science</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/bird/24da3bfe-6231-4d0f-a68c-6b7b833d6cd5'>Bird Careers - Director, Data Science</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -161,7 +173,7 @@ delivering actionable insights on crop health directly to the field meaning farm
 <p><span class="badge badge-light">Toronto, ON Canada</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/SiaPartners/743999692292417-consultant-e-data-science'>Sia Partners Consultant(e) Data Science | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/SiaPartners/743999692292417-consultant-e-data-science'>Sia Partners Consultant(e) Data Science | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -202,7 +214,7 @@ have?...</p>
 <p>Jul 16, 2019 ... Expedia. We are looking for a Data Scientists to join our growing 20+ strong team
 . This position focuses on the measurement and optimization of advertising?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://caseware.workable.com/j/A0AF5CD597'>CaseWare - Jobs: Data Scientist x2 - Apply online</a></h5> 
+<h5><a href='https://caseware.workable.com/j/A0AF5CD597'>CaseWare - Jobs: Data Scientist x2 - Apply online</a></h5> 
 <p><span class="badge badge-light">Toronto, Ontario, Canada Toronto</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -255,7 +267,7 @@ have?...</p>
 <p>4 days ago ... Data Scientist. Remote - Tech. Technology: Product Development & Technology 
 ? Data Insights. Full-Time. Apply for this job. At Paylocity, we create software?...</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/netflix/5c895064-666f-429b-bc88-9647e1ea0560/apply'>Netflix - Senior Data Scientist - Operational Intelligence Platform</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/netflix/5c895064-666f-429b-bc88-9647e1ea0560/apply'>Netflix - Senior Data Scientist - Operational Intelligence Platform</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 10, 2019 ... Senior Data Scientist - Operational Intelligence Platform. Los Gatos, California. 
 Streaming ? Platform Engineering. Full-time?...</p>
@@ -265,7 +277,7 @@ Streaming ? Platform Engineering. Full-time?...</p>
 <p>Jul 18, 2019 ... Self-identification of veteran status (Completion is voluntary and will not subject 
 you to adverse treatment). Tubular Labs is a Government contractor subject to?...</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/the-climate-corporation/job/oEmCafww'>The Climate Corporation Careers - Data Scientist - Statistics</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/the-climate-corporation/job/oEmCafww'>The Climate Corporation Careers - Data Scientist - Statistics</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -300,7 +312,7 @@ Scientist ? Assistant Director drives forward the Business Value Creation...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/tempus/jobs/4368937002'>Job Application for Lead Data Scientist, Applied Machine Learning at Tempus</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/tempus/jobs/4368937002'>Job Application for Lead Data Scientist, Applied Machine Learning at Tempus</a></h5> 
 <p><span class="badge badge-light">Chicago</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -389,7 +401,7 @@ Science (?Behavioral Data Scientist?) to support our three core operational?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://medlanes.join.com/jobs/263024-data-scientist-digital-health-startup-m-f'>Job @ Medlanes (Berlin): Data Scientist - Digital ... | JOIN</a></h5> 
+<h5><a href='https://medlanes.join.com/jobs/263024-data-scientist-digital-health-startup-m-f'>Job @ Medlanes (Berlin): Data Scientist - Digital ... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
@@ -469,18 +481,6 @@ application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <h5><a href='https://boards.greenhouse.io/8451/jobs/4368755002'>Job Application for Lead Data Scientist at 84.51? </a></h5> 
 <p><span class="badge badge-light">Cincinnati, OH</span></p>
 <p>Posted on: 2019-07-23</p>
-<hr/>
-<h5><a href='https://bah.wd1.myworkdayjobs.com/BAH_Jobs/job/USA-VA-Arlington-2451-Crystal-Dr/Data-Scientist--Junior_R0062097'>Data Scientist, Junior</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Jul 16, 2019 ... Are you fascinated by the possibilities presented by the IoT, machine learning, 
-and artificial intelligence advances? In an increasingly connected world, massive
-?...</p>
-<hr/>
-<h5><a href='https://bah.wd1.myworkdayjobs.com/BAH_Jobs/job/USA-MD-Columbia-7200-Riverwood-Dr/Data-Scientist--Senior_R0062237-1'>Data Scientist, Senior</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Jul 12, 2019 ... Are you fascinated by the possibilities presented by the IoT, machine learning, 
-and artificial intelligence advances? In an increasingly connected world, massive
-?...</p>
 <hr/>
 
 
